   if we absolutely need it.  Pointed out by Corinna, ok djm@
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2006/11/06 21:25:28
     [auth-rsa.c kexgexc.c kexdhs.c key.c ssh-dss.c sshd.c kexgexs.c
     ssh-keygen.c bufbn.c moduli.c scard.c kexdhc.c sshconnect1.c dh.c rsa.c]
     add missing checks for openssl return codes; with & ok djm@

20061105
 - (djm) OpenBSD CVS Sync
   - otto@cvs.openbsd.org 2006/10/28 18:08:10
     [ssh.1]
     correct/expand example of usage of -w; ok jmc@ stevesk@
   - markus@cvs.openbsd.org 2006/10/31 16:33:12
     [kexdhc.c kexdhs.c kexgexc.c kexgexs.c]
     check DH_compute_key() for -1 even if it should not happen because of
     earlier calls to dh_pub_is_valid(); report krahmer at suse.de; ok djm

20061101
 - (dtucker) [openbsd-compat/port-solaris.c] Bug #1255: Make only hwerr
   events fatal in Solaris process contract support and tell it to signal
   only processes in the same process group when something happens.
   Based on information from andrew.benham at thus.net and similar to
   a patch from Chad Mynhier.  ok djm@

20061027
- (djm) [auth.c] gc some dead code

20061023
 - (djm) OpenBSD CVS Sync
   - ray@cvs.openbsd.org 2006/09/30 17:48:22
     [sftp.c]
     Clear errno before calling the strtol functions.
     From Paul Stoeber <x0001 at x dot de1 dot cc>.
     OK deraadt@.
   - djm@cvs.openbsd.org 2006/10/06 02:29:19
     [ssh-agent.c ssh-keyscan.c ssh.c]
     sys/resource.h needs sys/time.h; prompted by brad@
     (NB. Id sync only for portable)
   - djm@cvs.openbsd.org 2006/10/09 23:36:11
     [session.c]
     xmalloc -> xcalloc that was missed previously, from portable
     (NB. Id sync only for portable, obviously)
   - markus@cvs.openbsd.org 2006/10/10 10:12:45
     [sshconnect.c]
     sleep before retrying (not after) since sleep changes errno; fixes
     pr 5250; rad@twig.com; ok dtucker djm
   - markus@cvs.openbsd.org 2006/10/11 12:38:03
     [clientloop.c serverloop.c]